# esp32s3-box3-doubao

./: .gitignore  BOX3DESIGN.md  CMakeLists.txt  DETAIL_DESIGN.md  README.md  partitions.csv  sdkconfig.defaults
components/json/: CMakeLists.txt
components/tcp_transport/: transport_ws.c
doubao_c_version/: .gitignore  CMakeLists.txt  DESIGN.md  README.md  audio.c  audio.h  client.c  client.h  config.h  main.c  protocol.c  protocol.h
doubao_py_demo/: README.md  audio_manager.py  config.py  realtime_dialog_client.py
main/: CMakeLists.txt  Kconfig.projbuild  Kconfig.projbuild.example  afe_handler.c  afe_handler.h  app_main.c  audio_hal.c  audio_hal.h  doubao_protocol.c  doubao_protocol.h  doubao_ws_client.c  doubao_ws_client.h  idf_component.yml  opus_processor.c  opus_processor.h  ui_lcd.c  ui_lcd.h
