idf_component_register(
    SRCS
        "app_main.c"
        "doubao_protocol.c"
        "doubao_ws_client.c"
        "audio_hal.c"
        "opus_processor.c"
    INCLUDE_DIRS
        "."
    PRIV_REQUIRES
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_psram
        esp_rom
        driver
)
